syntax = "proto3";
package training;
option go_package = "./;pb";

import "google/protobuf/timestamp.proto";
service FPTFlight {
    rpc CreateFlight(Flight) returns (Flight);
    rpc UpdateFlight(Flight) returns (Flight);
    rpc FindFlight(FindFlightRequest) returns (Flight);
    rpc SearchFlight(SearchFlightRequest) returns (SearchFlightResponse);
}
message Flight {
    string id = 1;
    string name = 2; 
    string from = 3;
    string to = 4;
    google.protobuf.Timestamp date = 5;
    string status = 6;
    int64 avaliable_slot = 7;
}
message SearchFlightRequest {
    string from = 1;
    string to = 2;
    string name = 4;
}
message FindFlightRequest {
    string id = 1;
}
message SearchFlightResponse {
    repeated Flight flights = 1;
}